sysyruntimelibrary-master/functional_test/61_rec_fibonacci.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/61_rec_fibonacci.sy:18:11: error: syntax error, unexpected R_PARENTHESIS
18| 	n=getint()
  |            ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/61_rec_fibonacci.sy:0:0: error: not find main function
